# fastapi-starter

./: .editorconfig  .env.example  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  copier.yml  docker-compose.yml  pyproject.toml  requirements.txt  ruff.toml
alembic/: env.py
src/: main.py
src/api/v1/: health.py
src/models/: base.py
src/{{ project_name }}/db/: session.py
tests/: test_health.py
{{ project_name }}/: Dockerfile  requirements.txt  ruff.toml
{{ project_name }}/src/{{ project_name }}/: main.py
{{ project_name }}/src/{{ project_name }}/api/v1/: health.py
{{ project_name }}/src/{{ project_name }}/core/: config.py
